HELM_DEPLOYMENTS/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-from-yaml
spec:
  rules:
  - http:
      paths:
      - path: /currency-exchange/
        pathType: Prefix
        backend:
          service:
           name: currency-exchange
           port:
              number: 8000     
      - path:  /currency-conversion/
        pathType: Prefix
        backend:
          service: 
           name: currency-conversion
           port:
              number: 8100
